[tool.poetry]
name = "quasar"
version = "0.1.0"
description = "Python Smell Detector for Python"
authors = ["Khushiyant <khushiyant2002@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.2.6"
click = "^8.1.7"
numpy = "^1.26.3"
pytest = "^8.0.0"
python-dotenv = "^1.0.1"
radon = "^6.0.1"
redis = "^5.0.1"
requests = "^2.31.0"
scikit-learn = "^1.4.0"
pygithub = "^2.2.0"
ruff = "^0.2.1"
termcolor = "^2.4.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb", "__init__.py"]
